# Datacron

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  SPEC.md  pyproject.toml  server.json
.githooks/: pre-push
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: ARCHITECTURE.md  ChatGPT_deep-research-report.md  ChatGPT_v2-review.md  Gemini_deep-research-report.md  Gemini_v2-review.md  decisions-tranchees-v2.1.md  freshness-contract-v1.md  guide-utilisateur.md  index.md  integrity-scrubber.md  operational-health.md  security-boundary.md  setup.md
docs/agent-briefs/: 00-shared-context.md  01-contracts.md  02-brief-claude-code.md  03-brief-codex.md  04-integration-plan.md
docs/en/: architecture.md  decisions-v2.1.md  faq.md  freshness-contract-v1.md  index.md  installation-windows.md  integrity-scrubber.md  operational-health.md  security-boundary.md  setup.md  spec.md  user-guide.md
docs/fr/: architecture.md  decisions-v2.1.md  faq.md  freshness-contract-v1.md  index.md  installation-windows.md  integrity-scrubber.md  operational-health.md  security-boundary.md  setup.md  spec.md  user-guide.md
docs/reviews/sem1/: claude-code-on-codex.md  codex-on-claude-code.md
docs/reviews/sem2/: claude-code-on-codex.md  codex-on-claude-code-response.md  codex-on-claude-code.md
docs/reviews/sem3/: claude-code-on-codex.md
examples/: eval-questions.example.yaml
local/eval-contradiction/: claim-decomp-config.json  claim-decomp-rules.json  claim-decomp-rules.md  claim-decomp-v2-config.json  claim-decomp-v2-rules.json  claim-decomp-v2-rules.md  claim_decomp_candidates.py  evidence-claim-decomp-v2.json  evidence-claim-decomp.json  evidence-llm-judge.json  evidence-union-recall.json  labels.jsonl  llm-judge-cache.json  llm-judge-config.json  llm-judge-prompt.md  llm_judge_candidates.py  measure_claim_decomp.py  measure_llm_judge.py  measure_union_recall.py  report-claim-decomp-v2.md  report-claim-decomp.md  report-llm-judge.md  report-union-recall.md  union-recall-config.json
packaging/: datacron_launcher.py
packaging/windows/: build_installer.py  datacron-installer.iss
scripts/: audit_excluded_notes.py  build_installer.ps1  build_installer.sh  bump_version.py  check_invariants.py  mcp_registry_publish.sh  release.bat  reliability_scan.py
src/datacron/: __init__.py  bootstrap.py  cli.py  contradictions.py  reliability.py  reliability_evidence.json  scrubber.py  setup_wizard.py
src/datacron/core/: __init__.py  config.py  durability.py  frontmatter.py  hashing.py  logger.py  markdown_sections.py  models.py  operation_log.py  paths.py  protocols.py  query_expansion.py  scope.py  security.py  temporal.py  vault.py  vault_writer.py  versioning.py
src/datacron/eval/: __init__.py  baseline.py  harness.py  metrics.py  transport.py
src/datacron/indexing/: __init__.py  chunker.py  fts5_store.py  rebuild.py  reconcile.py  ripgrep.py  wikilinks.py
src/datacron/installers/: __init__.py  claude_desktop.py  mcp_clients.py  protocol.py
src/datacron/mcp/: __init__.py  health.py  identity.py  resources.py  sandbox.py  security_manifest.py  server.py  tool_contract.py  tools.py
src/datacron/mcp/tools/: __init__.py  advisory.py  ops.py  payloads.py  read.py  registry.py  search.py  write.py  write_validation.py
tests/: conftest.py
tests/fixtures/: freshness-contract-v1.json  reliability_baseline.json
tests/fixtures/chunker/: code-blocks.md  frontmatter-only.md  gfm-table.md  lists-and-blockquotes.md  nested-headings.md  no-headings.md
tests/fixtures/demo-vault/: code-snippets.md  important-note.md  no-frontmatter.md  welcome.md
tests/fixtures/demo-vault/subfolder/: nested-thoughts.md
tests/integration/: test_e2e_sem3.py  test_eval_pipeline.py  test_mcp_e2e.py  test_ripgrep_real.py
tests/properties/: test_atomic_reindex.py  test_auditability.py  test_durable_writes.py  test_operational_capabilities.py  test_reliability_invariants.py  test_retrieval_completeness.py  test_scrubber.py  test_security_invariants.py
tests/unit/: test_bump_version.py  test_cli.py  test_contradictions.py  test_import_purity.py  test_mcp_clients.py  test_packaging.py  test_protocol_installer.py  test_setup.py  test_setup_reset.py  test_shared_fixtures.py  test_version_normalization.py  test_versioning.py  test_windows_installer_build.py
tests/unit/core/: test_config.py  test_durability.py  test_frontmatter.py  test_hashing.py  test_logger.py  test_models.py  test_operation_log.py  test_paths.py  test_query_expansion.py  test_scope.py  test_security.py  test_temporal.py  test_vault.py  test_vault_writer.py
tests/unit/eval/: test_baseline.py  test_harness.py  test_metrics.py
tests/unit/indexing/: __init__.py  test_chunker.py  test_fts5_store.py  test_reconcile.py  test_ripgrep.py  test_wikilinks.py
tests/unit/installers/: test_claude_desktop.py
tests/unit/mcp/: test_contradiction_advisory.py  test_identity.py  test_resources.py  test_sandbox.py  test_server.py  test_tools.py  test_tools_search.py
